@@ -63,6 +63,8 @@ Bugfixes
      http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2011x01x21x162309
    * Added a conditional check for avformat_alloc_context , av_avformat_alloc_context to fix 
      http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2011x10x05x071936 (Angel Carpintero)
+   * Fix issue with JPEG , adding dinfo.do_fancy_upsampling = FALSE;
+     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2011x08x20x194659
 
 3.2.12 Summary of Changes
 
